--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ repositories {
 
 dependencies {
     implementation 'org.projectlombok:lombok:1.18.26'
+    // https://mvnrepository.com/artifact/com.github.javafaker/javafaker
+    implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
+
+
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
